@@ -289,8 +289,7 @@ function print_pedigree_person($pid, $style=1, $show_famlink=true, $count=0, $pe
 			
 //LBox --------  change for Lightbox Album --------------------------------------------
 			if (file_exists("modules/lightbox/album.php")) {
-				$name3 = trim($object["file"]);
-				print "<a href=\"" . $object["file"] . "\" rel=\"clearbox[general_2]\" title=\"" . $object['mid'] . "\">" . "\n";
+				print "<a href=\"" . $object["file"] . "\" rel=\"clearbox[general_2]\" title=\"" . $object['mid'] . ":" . $GEDCOM . ":" . PrintReady($name) . "\">" . "\n";
 // ---------------------------------------------------------------------------------------------
 
 			}elseif (!empty($object['mid']) && $USE_MEDIA_VIEWER) {
